Incluí el Hover a los discos, y modifiqué el estilo de las leyendas

--- a/html/discos.html
+++ b/html/discos.html
@@ -53,61 +53,91 @@
         <h1> DISCOGRAFÍA </h1>
 
         <section class="container-fluid row">
-            <figure class="col-xl-4 col-md-6 col-sm-12">
+            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover">
                 <img class="img-fluid object-fit-cover" src="../img/discos/esquivando_charcos.jpg"
                     alt="Disco Esquivando Charcos">
-                <figcaption> ESQUIVANDO CHARCOS <br> 1991 </figcaption>
+                <figcaption>
+                    <div class="discoItalic discoNegrita">ESQUIVANDO CHARCOS</div>
+                    <div class="discoItalic">1991</div>
+                </figcaption>
             </figure>
 
-            <figure class="col-xl-4 col-md-6 col-sm-12">
+            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover">
                 <img class="img-fluid object-fit-cover" src="../img/discos/a_donde_me_lleva_la_vida.png"
                     alt="Disco A Donde Me Lleva La Vida">
-                <figcaption> A DONDE ME LLEVA LA VIDA <br> 1993 </figcaption>
+                <figcaption>
+                    <div class="discoItalic discoNegrita">A DONDE ME LLEVA LA VIDA</div>
+                    <div class="discoItalic">1993</div>
+                </figcaption>
             </figure>
 
-            <figure class="col-xl-4 col-md-6 col-sm-12">
+            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover">
                 <img class="img-fluid object-fit-cover" src="../img/discos/despedazado_por_mil_partes.jpg"
                     alt="Disco Despedazado Por Mil Partes">
-                <figcaption> DESPEDAZADO POR MIL PARTES <br> 1996 </figcaption>
+                <figcaption>
+                    <div class="discoItalic discoNegrita">DESPEDAZADO POR MIL PARTES</div>
+                    <div class="discoItalic">1996</div>
+                </figcaption>
             </figure>
 
-            <figure class="col-xl-4 col-md-6 col-sm-12">
+            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover">
                 <img class="img-fluid object-fit-cover" src="../img/discos/la_renga.jpg" alt="Disco La Renga">
-                <figcaption> LA RENGA <br> 1998 </figcaption>
+                <figcaption>
+                    <div class="discoItalic discoNegrita">LA RENGA</div>
+                    <div class="discoItalic">1998</div>
+                </figcaption>
             </figure>
 
-            <figure class="col-xl-4 col-md-6 col-sm-12">
+            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover">
                 <img class="img-fluid object-fit-cover" src="../img/discos/la_esquina_del_infinito.jpg"
                     alt="Disco La Esquina Del Infinito">
-                <figcaption> LA ESQUINA DEL INFINITO <br> 2000 </figcaption>
+                <figcaption>
+                    <div class="discoItalic discoNegrita">LA ESQUINA DEL INFINITO</div>
+                    <div class="discoItalic">2000</div>
+                </figcaption>
             </figure>
 
-            <figure class="col-xl-4 col-md-6 col-sm-12">
+            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover">
                 <img class="img-fluid object-fit-cover" src="../img/discos/detonador_de_sueños.jpg"
                     alt="Disco Detonador De Sueños">
-                <figcaption> DETONADOR DE SUEÑOS <br> 2003 </figcaption>
+                <figcaption>
+                    <div class="discoItalic discoNegrita">DETONADOR DE SUEÑOS</div>
+                    <div class="discoItalic">2003</div>
+                </figcaption>
             </figure>
 
-            <figure class="col-xl-4 col-md-6 col-sm-12">
+            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover">
                 <img class="img-fluid object-fit-cover" src="../img/discos/truenotierra.jpg" alt="Disco Truenotierra">
-                <figcaption> TRUENOTIERRA <br> 2006 </figcaption>
+                <figcaption>
+                    <div class="discoItalic discoNegrita">TRUENOTIERRA</div>
+                    <div class="discoItalic">2006</div>
+                </figcaption>
             </figure>
 
-            <figure class="col-xl-4 col-md-6 col-sm-12">
+            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover">
                 <img class="img-fluid object-fit-cover" src="../img/discos/algun_rayo.jpg" alt="Disco Algún Rayo">
-                <figcaption> ALGÚN RAYO <br> 2010 </figcaption>
+                <figcaption>
+                    <div class="discoItalic discoNegrita">ALGÚN RAYO</div>
+                    <div class="discoItalic">2010</div>
+                </figcaption>
             </figure>
 
-            <figure class="col-xl-4 col-md-6 col-sm-12">
+            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover">
                 <img class="img-fluid object-fit-cover" src="../img/discos/pesados_vestigios.jpg"
                     alt="Disco Pesados Vestigios">
-                <figcaption> PESADOS VESTIGIOS <br> 2014 </figcaption>
+                <figcaption>
+                    <div class="discoItalic discoNegrita">PESADOS VESTIGIOS</div>
+                    <div class="discoItalic">2014</div>
+                </figcaption>
             </figure>
 
-            <figure class="col-xl-4 col-md-6 col-sm-12">
+            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover">
                 <img class="img-fluid object-fit-cover" src="../img/discos/alejado_de_la_red.jpg"
                     alt="Disco Alejado De La Red">
-                <figcaption> ALEJADO DE LA RED <br> 2022 </figcaption>
+                <figcaption>
+                    <div class="discoItalic discoNegrita">ALEJADO DE LA RED</div>
+                    <div class="discoItalic">2022</div>
+                </figcaption>
             </figure>
         </section>
 
@@ -115,22 +145,31 @@
 
         <section class="container-fluid row">
 
-            <figure class="col-xl-4 col-md-6 col-sm-12">
+            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover">
                 <img class="img-fluid object-fit-cover" src="../img/discos/bailando_en_una_pata.jpg"
                     alt="Bailando En Una Pata">
-                <figcaption> BAILANDO EN UNA PATA <br> 1995 </figcaption>
-            </figure class="col-xl-4 col-md-6 col-sm-12">
-
-            <figure class="col-xl-4 col-md-6 col-sm-12">
-                <img class="img-fluid object-fit-cover" src="../img/discos/insoportablemente_vivo.jpg"
-                    alt="Disco Insoportablemente Vivo">
-                <figcaption> INSOPORTABLEMENTE VIVO <br> 2001 </figcaption>
+                <figcaption>
+                    <div class="discoItalic discoNegrita">BAILANDO EN UNA PATA</div>
+                    <div class="discoItalic">1995</div>
+                </figcaption>
             </figure>
 
-            <figure class="col-xl-4 col-md-6 col-sm-12">
+            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover">
+                <img class="img-fluid object-fit-cover" src="../img/discos/insoportablemente_vivo.jpg"
+                    alt="Disco Insoportablemente Vivo">
+                <figcaption>
+                    <div class="discoItalic discoNegrita">INSOPORTABLEMENTE VIVO</div>
+                    <div class="discoItalic">2001</div>
+                </figcaption>
+            </figure>
+
+            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover">
                 <img class="img-fluid object-fit-cover" src="../img/discos/en_el_ojo_del_huracan.jpg"
                     alt="Disco En El Ojo Del Huracán">
-                <figcaption> EN EL OJO DEL HURACÁN <br> 2006 </figcaption>
+                <figcaption>
+                    <div class="discoItalic discoNegrita">EN EL OJO DEL HURACÁN</div>
+                    <div class="discoItalic">2006</div>
+                </figcaption>
             </figure>
         </section>
 
