Mejoré la página Último_Disco

--- a/html/ultimo_disco.html
+++ b/html/ultimo_disco.html
@@ -50,12 +50,12 @@
 
     <main>
         <h1> ÚLTIMO DISCO </h1>
-        <div class="container-fluid row">
-            <img class="img-fluid col-xl-7 col-md-12" src="../img/ultimo_disco/ultimo_disco.jpg"
+        <div class="container-fluid row pt-2 pb-5">
+            <img class="img-fluid col-xl-6 col-md-12" src="../img/ultimo_disco/ultimo_disco.jpg"
                 alt="Ultimo Disco de la Renga">
 
-            <div class="col-xl-5 col-md-12 d-flex flex-wrap align-items-center justify-content-center mt-3 mb-5 fs-6">
-                <p>Alejado de la red es el doceavo álbum de estudio editado por
+            <div class="col-xl-6 col-md-12 d-flex flex-wrap align-items-center justify-content-center mt-3 mb-5 fs-6">
+                <p><span class="boldText">Alejado de la red</span> es el doceavo álbum de estudio editado por
                     el grupo
                     musical de
                     Argentina La Renga.
@@ -70,8 +70,11 @@
                     stoner
                     rock que el
                     grupo había dado en
-                    el álbum Algún rayo y que había dejado de lado en el álbum de estudio anterior Pesados vestigios,
-                    donde volvieron a las raíces y al sonido clásico del grupo.</p>
+                    el álbum <span class="italicText">Algún rayo</span> y que había dejado de lado en el álbum de
+                    estudio anterior
+                    <span class="italicText">Pesados vestigios</span>,
+                    donde volvieron a las raíces y al sonido clásico del grupo.
+                </p>
                 <a class="btn btn-success my-4" href="https://open.spotify.com/intl-es/album/4PTq788RYYJ6cUV1yzFaUP"
                     target="_blank" role="button">
                     Reproducir en Spotify </a>
