Arreglo de la página Próximos Shows

--- a/html/proximos_shows.html
+++ b/html/proximos_shows.html
@@ -52,7 +52,7 @@
         <h1> PRÓXIMOS SHOWS </h1>
         <h3> Gira "Alejado de la red" </h3>
 
-        <section class="container-fluid my-5">
+        <section class="container-fluid row py-4 gap-4">
             <div class="container-fluid row pb-4 bgDegrade">
                 <div class="col-xl-2 col-sm-12 my-2 d-flex align-self-center">
                     <p> AGO 26 </p>
@@ -130,7 +130,7 @@
 
     </main>
 
-    <footer class="container-fluid d-flex justify-content-md-between justify-content-center bg-dark fixed-bottom py-2"
+    <footer class="container-fluid d-flex justify-content-md-between justify-content-center bg-dark sticky-bottom py-2"
         data-bs-theme="dark">
         <span class="text-light d-none d-md-block"> ¡El Rock & Roll no morirá jamas! </span>
         <div>
