Agregué mixin a mi proyecto

--- a/html/ultimo_disco.html
+++ b/html/ultimo_disco.html
@@ -55,18 +55,20 @@
                 alt="Ultimo Disco de la Renga">
 
             <div class="col-xl-6 col-md-12 d-flex flex-wrap align-items-center justify-content-center mt-3 mb-5 fs-6">
-                <p><span class="boldText">Alejado de la red</span> es el doceavo álbum de estudio editado por
+                <p class="ultimoDiscoParrafo"><span class="boldText">Alejado de la red</span> es el doceavo álbum de
+                    estudio
+                    editado por
                     el grupo
                     musical de
                     Argentina La Renga.
                     Fue publicado el 4 de febrero de 2022, de manera independiente.</p>
-                <p>La gira de presentación comenzó el 26 de febrero de 2022
+                <p class="ultimoDiscoParrafo">La gira de presentación comenzó el 26 de febrero de 2022
                     (esta es la
                     primera
                     gira del grupo musical
                     por Argentina desde 2018, y los primeros conciertos desde 2019) en Córdoba y seguirá por Salta, San
                     Luis y Neuquén.</p>
-                <p>El álbum de estudio vuelve a la línea y dirección del género
+                <p class="ultimoDiscoParrafo">El álbum de estudio vuelve a la línea y dirección del género
                     stoner
                     rock que el
                     grupo había dado en
