Agregué mixin con parámetros

--- a/html/discos.html
+++ b/html/discos.html
@@ -53,90 +53,93 @@
         <h1> DISCOGRAFÍA </h1>
 
         <section class="container-fluid row">
-            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover">
-                <img class="img-fluid object-fit-cover" src="../img/discos/esquivando_charcos.jpg"
+            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover my-3">
+                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/esquivando_charcos.jpg"
                     alt="Disco Esquivando Charcos">
                 <figcaption>
-                    <div class="discoItalic discoNegrita">ESQUIVANDO CHARCOS</div>
-                    <div class="discoItalic">1991</div>
+                    <div class="discosItalic discosBold">ESQUIVANDO CHARCOS</div>
+                    <div class="discosItalic">1991</div>
                 </figcaption>
             </figure>
 
-            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover">
-                <img class="img-fluid object-fit-cover" src="../img/discos/a_donde_me_lleva_la_vida.png"
+            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover my-3">
+                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/a_donde_me_lleva_la_vida.png"
                     alt="Disco A Donde Me Lleva La Vida">
                 <figcaption>
-                    <div class="discoItalic discoNegrita">A DONDE ME LLEVA LA VIDA</div>
-                    <div class="discoItalic">1993</div>
+                    <div class="discosItalic discosBold">A DONDE ME LLEVA LA VIDA</div>
+                    <div class="discosItalic">1993</div>
                 </figcaption>
             </figure>
 
-            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover">
-                <img class="img-fluid object-fit-cover" src="../img/discos/despedazado_por_mil_partes.jpg"
+            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover my-3">
+                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/despedazado_por_mil_partes.jpg"
                     alt="Disco Despedazado Por Mil Partes">
                 <figcaption>
-                    <div class="discoItalic discoNegrita">DESPEDAZADO POR MIL PARTES</div>
-                    <div class="discoItalic">1996</div>
+                    <div class="discosItalic discosBold">DESPEDAZADO POR MIL PARTES</div>
+                    <div class="discosItalic">1996</div>
                 </figcaption>
             </figure>
 
-            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover">
-                <img class="img-fluid object-fit-cover" src="../img/discos/la_renga.jpg" alt="Disco La Renga">
+            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover my-3">
+                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/la_renga.jpg"
+                    alt="Disco La Renga">
                 <figcaption>
-                    <div class="discoItalic discoNegrita">LA RENGA</div>
-                    <div class="discoItalic">1998</div>
+                    <div class="discosItalic discosBold">LA RENGA</div>
+                    <div class="discosItalic">1998</div>
                 </figcaption>
             </figure>
 
-            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover">
-                <img class="img-fluid object-fit-cover" src="../img/discos/la_esquina_del_infinito.jpg"
+            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover my-3">
+                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/la_esquina_del_infinito.jpg"
                     alt="Disco La Esquina Del Infinito">
                 <figcaption>
-                    <div class="discoItalic discoNegrita">LA ESQUINA DEL INFINITO</div>
-                    <div class="discoItalic">2000</div>
+                    <div class="discosItalic discosBold">LA ESQUINA DEL INFINITO</div>
+                    <div class="discosItalic">2000</div>
                 </figcaption>
             </figure>
 
-            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover">
-                <img class="img-fluid object-fit-cover" src="../img/discos/detonador_de_sueños.jpg"
+            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover my-3">
+                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/detonador_de_sueños.jpg"
                     alt="Disco Detonador De Sueños">
                 <figcaption>
-                    <div class="discoItalic discoNegrita">DETONADOR DE SUEÑOS</div>
-                    <div class="discoItalic">2003</div>
+                    <div class="discosItalic discosBold">DETONADOR DE SUEÑOS</div>
+                    <div class="discosItalic">2003</div>
                 </figcaption>
             </figure>
 
-            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover">
-                <img class="img-fluid object-fit-cover" src="../img/discos/truenotierra.jpg" alt="Disco Truenotierra">
+            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover my-3">
+                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/truenotierra.jpg"
+                    alt="Disco Truenotierra">
                 <figcaption>
-                    <div class="discoItalic discoNegrita">TRUENOTIERRA</div>
-                    <div class="discoItalic">2006</div>
+                    <div class="discosItalic discosBold">TRUENOTIERRA</div>
+                    <div class="discosItalic">2006</div>
                 </figcaption>
             </figure>
 
-            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover">
-                <img class="img-fluid object-fit-cover" src="../img/discos/algun_rayo.jpg" alt="Disco Algún Rayo">
+            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover my-3">
+                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/algun_rayo.jpg"
+                    alt="Disco Algún Rayo">
                 <figcaption>
-                    <div class="discoItalic discoNegrita">ALGÚN RAYO</div>
-                    <div class="discoItalic">2010</div>
+                    <div class="discosItalic discosBold">ALGÚN RAYO</div>
+                    <div class="discosItalic">2010</div>
                 </figcaption>
             </figure>
 
-            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover">
-                <img class="img-fluid object-fit-cover" src="../img/discos/pesados_vestigios.jpg"
+            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover my-3">
+                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/pesados_vestigios.jpg"
                     alt="Disco Pesados Vestigios">
                 <figcaption>
-                    <div class="discoItalic discoNegrita">PESADOS VESTIGIOS</div>
-                    <div class="discoItalic">2014</div>
+                    <div class="discosItalic discosBold">PESADOS VESTIGIOS</div>
+                    <div class="discosItalic">2014</div>
                 </figcaption>
             </figure>
 
-            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover">
-                <img class="img-fluid object-fit-cover" src="../img/discos/alejado_de_la_red.jpg"
+            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover my-3">
+                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/alejado_de_la_red.jpg"
                     alt="Disco Alejado De La Red">
                 <figcaption>
-                    <div class="discoItalic discoNegrita">ALEJADO DE LA RED</div>
-                    <div class="discoItalic">2022</div>
+                    <div class="discosItalic discosBold">ALEJADO DE LA RED</div>
+                    <div class="discosItalic">2022</div>
                 </figcaption>
             </figure>
         </section>
@@ -145,30 +148,30 @@
 
         <section class="container-fluid row">
 
-            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover">
-                <img class="img-fluid object-fit-cover" src="../img/discos/bailando_en_una_pata.jpg"
+            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover my-3">
+                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/bailando_en_una_pata.jpg"
                     alt="Bailando En Una Pata">
                 <figcaption>
-                    <div class="discoItalic discoNegrita">BAILANDO EN UNA PATA</div>
-                    <div class="discoItalic">1995</div>
+                    <div class="discosItalic discosBold">BAILANDO EN UNA PATA</div>
+                    <div class="discosItalic">1995</div>
                 </figcaption>
             </figure>
 
-            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover">
-                <img class="img-fluid object-fit-cover" src="../img/discos/insoportablemente_vivo.jpg"
+            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover my-3">
+                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/insoportablemente_vivo.jpg"
                     alt="Disco Insoportablemente Vivo">
                 <figcaption>
-                    <div class="discoItalic discoNegrita">INSOPORTABLEMENTE VIVO</div>
-                    <div class="discoItalic">2001</div>
+                    <div class="discosItalic discosBold">INSOPORTABLEMENTE VIVO</div>
+                    <div class="discosItalic">2001</div>
                 </figcaption>
             </figure>
 
-            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover">
-                <img class="img-fluid object-fit-cover" src="../img/discos/en_el_ojo_del_huracan.jpg"
+            <figure class="col-xl-4 col-md-6 col-sm-12 discoHover my-3">
+                <img class="img-fluid object-fit-cover discosMargin" src="../img/discos/en_el_ojo_del_huracan.jpg"
                     alt="Disco En El Ojo Del Huracán">
                 <figcaption>
-                    <div class="discoItalic discoNegrita">EN EL OJO DEL HURACÁN</div>
-                    <div class="discoItalic">2006</div>
+                    <div class="discosItalic discosBold">EN EL OJO DEL HURACÁN</div>
+                    <div class="discosItalic">2006</div>
                 </figcaption>
             </figure>
         </section>
