--- a/html/proximos_shows.html
+++ b/html/proximos_shows.html
@@ -58,10 +58,10 @@
                     <p> AGO 26 </p>
                 </div>
                 <div class="col-xl-4 col-sm-12 my-2 d-flex align-self-center">
-                    <p class="fw-bold"> BUENOS AIRES, ARGENTINA </p>
+                    <p class="proximosShowsBold"> BUENOS AIRES, ARGENTINA </p>
                 </div>
                 <div class="col-xl-4 col-sm-12 my-2 d-flex align-self-center">
-                    <p class="showsLugar"> ESTADIO TOMÁS ADOLFO DUCÓ </p>
+                    <p class="proximosShowsItalic"> ESTADIO TOMÁS ADOLFO DUCÓ </p>
                 </div>
                 <div class="col-xl-2 col-sm-12 my-4 d-flex justify-content-center">
                     <button type="button" name="button" class="btn btn-primary"> ENTRADAS </button>
@@ -72,10 +72,10 @@
                     <p> SEP 12 </p>
                 </div>
                 <div class="col-xl-4 col-sm-12 my-2 d-flex align-self-center">
-                    <p class="fw-bold"> CÓRDOBA, ARGENTINA </p>
+                    <p class="proximosShowsBold"> CÓRDOBA, ARGENTINA </p>
                 </div>
                 <div class="col-xl-4 col-sm-12 my-2 d-flex align-self-center">
-                    <p class="showsLugar"> ESTADIO MARIO ALBERTO KEMPES </p>
+                    <p class="proximosShowsItalic"> ESTADIO MARIO ALBERTO KEMPES </p>
                 </div>
                 <div class="col-xl-2 col-sm-12 my-4 d-flex justify-content-center">
                     <button type="button" name="button" class="btn btn-primary"> ENTRADAS </button>
@@ -87,10 +87,10 @@
                     <p> SEP 24 </p>
                 </div>
                 <div class="col-xl-4 col-sm-12 my-2 d-flex align-self-center">
-                    <p class="fw-bold"> MENDOZA, ARGENTINA </p>
+                    <p class="proximosShowsBold"> MENDOZA, ARGENTINA </p>
                 </div>
                 <div class="col-xl-4 col-sm-12 my-2 d-flex align-self-center">
-                    <p class="showsLugar"> ESTADIO MALVINAS ARGENTINAS </p>
+                    <p class="proximosShowsItalic"> ESTADIO MALVINAS ARGENTINAS </p>
                 </div>
                 <div class="col-xl-2 col-sm-12 my-4 d-flex justify-content-center">
                     <button type="button" name="button" class="btn btn-primary"> ENTRADAS </button>
@@ -102,10 +102,10 @@
                     <p> OCT 26 </p>
                 </div>
                 <div class="col-xl-4 col-sm-12 my-2 d-flex align-self-center">
-                    <p class="fw-bold"> TIERRA DEL FUEGO, ARGENTINA </p>
+                    <p class="proximosShowsBold"> TIERRA DEL FUEGO, ARGENTINA </p>
                 </div>
                 <div class="col-xl-4 col-sm-12 my-2 d-flex align-self-center">
-                    <p class="showsLugar"> HANGAR DEL VIEJO AEROPUERTO </p>
+                    <p class="proximosShowsItalic"> HANGAR DEL VIEJO AEROPUERTO </p>
                 </div>
                 <div class="col-xl-2 col-sm-12 my-4 d-flex justify-content-center">
                     <button type="button" name="button" class="btn btn-primary"> ENTRADAS </button>
@@ -117,10 +117,10 @@
                     <p> NOV 6 </p>
                 </div>
                 <div class="col-xl-4 col-sm-12 my-2 d-flex align-self-center">
-                    <p class="fw-bold"> BUENOS AIRES, ARGENTINA </p>
+                    <p class="proximosShowsBold"> BUENOS AIRES, ARGENTINA </p>
                 </div>
                 <div class="col-xl-4 col-sm-12 my-2 d-flex align-self-center">
-                    <p class="showsLugar"> ESTADIO LIBERTADORES DE AMÉRICA </p>
+                    <p class="proximosShowsItalic"> ESTADIO LIBERTADORES DE AMÉRICA </p>
                 </div>
                 <div class="col-xl-2 col-sm-12 my-4 d-flex justify-content-center">
                     <button type="button" name="button" class="btn btn-primary"> ENTRADAS </button>
