--- a/html/ultimo_disco.html
+++ b/html/ultimo_disco.html
@@ -55,7 +55,8 @@
                 alt="Ultimo Disco de la Renga">
 
             <div class="col-xl-6 col-md-12 d-flex flex-wrap align-items-center justify-content-center mt-3 mb-5 fs-6">
-                <p class="ultimoDiscoParrafo"><span class="boldText">Alejado de la red</span> es el doceavo álbum de
+                <p class="ultimoDiscoParrafo"><span class="ultimoDiscoBold">Alejado de la red</span> es el doceavo álbum
+                    de
                     estudio
                     editado por
                     el grupo
@@ -72,9 +73,9 @@
                     stoner
                     rock que el
                     grupo había dado en
-                    el álbum <span class="italicText">Algún rayo</span> y que había dejado de lado en el álbum de
+                    el álbum <span class="ultimoDiscoItalic">Algún rayo</span> y que había dejado de lado en el álbum de
                     estudio anterior
-                    <span class="italicText">Pesados vestigios</span>,
+                    <span class="ultimoDiscoItalic">Pesados vestigios</span>,
                     donde volvieron a las raíces y al sonido clásico del grupo.
                 </p>
                 <a class="btn btn-success my-4" href="https://open.spotify.com/intl-es/album/4PTq788RYYJ6cUV1yzFaUP"
