Modifiqué los title del HEAD para personalizar cada HTML, y agregué un META Description para cada HTML

--- a/html/biografia.html
+++ b/html/biografia.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El rock & roll no morirá jamás</title>
+    <meta name="description"
+        content="En la sección 'Biografía' de La Renga Rock encontrarás información relevante sobre los inicios de la banda, algunos de los momentos más importante de su recorrido musical, y detalles de actualidad">
+    <title>Biografía &#127928 La Renga Rock</title>
     <link rel="shortcut icon" href="../img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
