--- a/html/contacto.html
+++ b/html/contacto.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El rock & roll no morirá jamás</title>
+    <meta name="description"
+        content="En la sección 'Contacto' de La Renga Rock encontrarás un formulario a completar; una vez registrado, comenzarás a recibir información sobre la banda (tal como próximos shows a realizar por la banda) de manera gratuita e inédita">
+    <title>Contacto &#127928 La Renga Rock</title>
     <link rel="shortcut icon" href="../img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
