--- a/html/proximos_shows.html
+++ b/html/proximos_shows.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El rock & roll no morirá jamás</title>
+    <meta name="description"
+        content="Aquí encontrarás información sobre los los próximos shows a realizar por La Renga. Tendrás información sobre el lugar y fecha de los eventos, y la posibilidad de adquirir entradas para los mismos">
+    <title>Shows &#127928 La Renga Rock</title>
     <link rel="shortcut icon" href="../img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
