--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El rock & roll no morirá jamás</title>
+    <meta name="description"
+        content="¡Bienvenidos a La Renga Rock! Esta página web representa un proyecto académico destinado a la creación de una fanpage de La Renga, una banda icónica del rock nacional argentino">
+    <title>La Renga Rock</title>
     <link rel="shortcut icon" href="img/favicon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
