Agregué unas variables para modificar el font de los botones

--- a/html/proximos_shows.html
+++ b/html/proximos_shows.html
@@ -64,7 +64,7 @@
                 <div class="col-xl-4 col-sm-12 my-2 d-flex align-self-center">
                     <p class="proximosShowsItalic"> ESTADIO TOMÁS ADOLFO DUCÓ </p>
                 </div>
-                <div class="col-xl-2 col-sm-12 my-4 d-flex justify-content-center">
+                <div class="col-xl-2 col-sm-12 my-4 d-flex justify-content-center buttonFont">
                     <button type="button" name="button" class="btn btn-primary"> ENTRADAS </button>
                 </div>
             </div>
@@ -78,7 +78,7 @@
                 <div class="col-xl-4 col-sm-12 my-2 d-flex align-self-center">
                     <p class="proximosShowsItalic"> ESTADIO MARIO ALBERTO KEMPES </p>
                 </div>
-                <div class="col-xl-2 col-sm-12 my-4 d-flex justify-content-center">
+                <div class="col-xl-2 col-sm-12 my-4 d-flex justify-content-center buttonFont">
                     <button type="button" name="button" class="btn btn-primary"> ENTRADAS </button>
                 </div>
             </div>
@@ -93,7 +93,7 @@
                 <div class="col-xl-4 col-sm-12 my-2 d-flex align-self-center">
                     <p class="proximosShowsItalic"> ESTADIO MALVINAS ARGENTINAS </p>
                 </div>
-                <div class="col-xl-2 col-sm-12 my-4 d-flex justify-content-center">
+                <div class="col-xl-2 col-sm-12 my-4 d-flex justify-content-center buttonFont">
                     <button type="button" name="button" class="btn btn-primary"> ENTRADAS </button>
                 </div>
             </div>
@@ -108,7 +108,7 @@
                 <div class="col-xl-4 col-sm-12 my-2 d-flex align-self-center">
                     <p class="proximosShowsItalic"> HANGAR DEL VIEJO AEROPUERTO </p>
                 </div>
-                <div class="col-xl-2 col-sm-12 my-4 d-flex justify-content-center">
+                <div class="col-xl-2 col-sm-12 my-4 d-flex justify-content-center buttonFont">
                     <button type="button" name="button" class="btn btn-primary"> ENTRADAS </button>
                 </div>
             </div>
@@ -123,7 +123,7 @@
                 <div class="col-xl-4 col-sm-12 my-2 d-flex align-self-center">
                     <p class="proximosShowsItalic"> ESTADIO LIBERTADORES DE AMÉRICA </p>
                 </div>
-                <div class="col-xl-2 col-sm-12 my-4 d-flex justify-content-center">
+                <div class="col-xl-2 col-sm-12 my-4 d-flex justify-content-center buttonFont">
                     <button type="button" name="button" class="btn btn-primary"> ENTRADAS </button>
                 </div>
             </div>
