--- a/html/ultimo_disco.html
+++ b/html/ultimo_disco.html
@@ -79,8 +79,8 @@
                     <span class="ultimoDiscoItalic">Pesados vestigios</span>,
                     donde volvieron a las raíces y al sonido clásico del grupo.
                 </p>
-                <a class="btn btn-success my-4" href="https://open.spotify.com/intl-es/album/4PTq788RYYJ6cUV1yzFaUP"
-                    target="_blank" role="button">
+                <a class="btn btn-success my-4 buttonFont"
+                    href="https://open.spotify.com/intl-es/album/4PTq788RYYJ6cUV1yzFaUP" target="_blank" role="button">
                     Reproducir en Spotify </a>
             </div>
         </div>
