Agregué modales para la compra de entradas

--- a/html/proximos_shows.html
+++ b/html/proximos_shows.html
@@ -65,7 +65,8 @@
                     <p class="proximosShowsItalic"> ESTADIO TOMÁS ADOLFO DUCÓ </p>
                 </div>
                 <div class="col-xl-2 col-sm-12 my-4 d-flex justify-content-center buttonFont">
-                    <button type="button" name="button" class="btn btn-primary"> ENTRADAS </button>
+                    <button type="button" name="button" class="btn btn-primary" data-bs-toggle="modal"
+                        data-bs-target="#staticBackdrop"> ENTRADAS </button>
                 </div>
             </div>
             <div class="container-fluid row pb-4 bgDegrade">
@@ -79,7 +80,8 @@
                     <p class="proximosShowsItalic"> ESTADIO MARIO ALBERTO KEMPES </p>
                 </div>
                 <div class="col-xl-2 col-sm-12 my-4 d-flex justify-content-center buttonFont">
-                    <button type="button" name="button" class="btn btn-primary"> ENTRADAS </button>
+                    <button type="button" name="button" class="btn btn-primary" data-bs-toggle="modal"
+                        data-bs-target="#staticBackdrop"> ENTRADAS </button>
                 </div>
             </div>
 
@@ -94,7 +96,8 @@
                     <p class="proximosShowsItalic"> ESTADIO MALVINAS ARGENTINAS </p>
                 </div>
                 <div class="col-xl-2 col-sm-12 my-4 d-flex justify-content-center buttonFont">
-                    <button type="button" name="button" class="btn btn-primary"> ENTRADAS </button>
+                    <button type="button" name="button" class="btn btn-primary" data-bs-toggle="modal"
+                        data-bs-target="#staticBackdrop"> ENTRADAS </button>
                 </div>
             </div>
 
@@ -109,7 +112,8 @@
                     <p class="proximosShowsItalic"> HANGAR DEL VIEJO AEROPUERTO </p>
                 </div>
                 <div class="col-xl-2 col-sm-12 my-4 d-flex justify-content-center buttonFont">
-                    <button type="button" name="button" class="btn btn-primary"> ENTRADAS </button>
+                    <button type="button" name="button" class="btn btn-primary" data-bs-toggle="modal"
+                        data-bs-target="#staticBackdrop"> ENTRADAS </button>
                 </div>
             </div>
 
@@ -124,7 +128,27 @@
                     <p class="proximosShowsItalic"> ESTADIO LIBERTADORES DE AMÉRICA </p>
                 </div>
                 <div class="col-xl-2 col-sm-12 my-4 d-flex justify-content-center buttonFont">
-                    <button type="button" name="button" class="btn btn-primary"> ENTRADAS </button>
+                    <button type="button" name="button" class="btn btn-primary" data-bs-toggle="modal"
+                        data-bs-target="#staticBackdrop"> ENTRADAS </button>
+                </div>
+            </div>
+
+            <!-- Shows Modal -->
+            <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+                aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header showsModalHeader">
+                            <h2 class="modal-title fs-5" id="staticBackdropLabel">Mensaje del creador</h2>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body showsModalBody">
+                            Esta sección no está disponible en este momento. Por favor reintentalo más tarde!
+                        </div>
+                        <div class="modal-footer showsModalFooter">
+                            <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
