Mejoré el estilo de los modales de discos

--- a/html/discos.html
+++ b/html/discos.html
@@ -324,7 +324,7 @@
                         </div>
                         <div class="modal-body discosModalBody">
                             <ul>
-                                <li>Trueno</li>
+                                <li class="mb-2">Trueno</li>
                                 <ol>
                                     <li>El monstruo que crece</li>
                                     <li>Almohada de piedra</li>
@@ -339,7 +339,7 @@
                                     <li>Entre la niebla</li>
                                     <li>Cuadrado obviado</li>
                                 </ol>
-                                <li>Tierra</li>
+                                <li class="mt-4 mb-2">Tierra</li>
                                 <ol>
                                     <li>Alunizando al unísono</li>
                                     <li>Sustancias entre las plantas</li>
@@ -550,7 +550,7 @@
                         </div>
                         <div class="modal-body discosModalBody">
                             <ul>
-                                <li>CD1</li>
+                                <li class="mb-2">CD1</li>
                                 <ol>
                                     <li>Panic show</li>
                                     <li>Motoralmaisangre</li>
@@ -569,7 +569,7 @@
                                     <li>El twist del pibe</li>
                                     <li>El hombre de la estrella</li>
                                 </ol>
-                                <li>CD2</li>
+                                <li class="mt-4 mb-2">CD2</li>
                                 <ol>
                                     <li>Paja brava</li>
                                     <li>Oportunidad oportuna</li>
