--- a/html/contacto.html
+++ b/html/contacto.html
@@ -53,7 +53,11 @@
         <h1> CONTACTO </h1>
         <h3> Suscribite para más noticias al instante </h3>
 
-        <form class="container-fluid mb-3 col-md-6 col-sm-12 my-4">
+        <!-- *************************************************** -->
+        <!-- ***** Si hubiese querido hacer el Form con BS ***** -->
+        <!-- *************************************************** -->
+
+        <!-- <form class="container-fluid mb-3 col-md-6 col-sm-12 my-4">
             <div class="mb-3 formBold">
                 <label for="nombre" class="form-label">Nombre</label>
                 <input type="text" id="nombre" placeholder="Ej. Juan" required class="form-control">
@@ -79,7 +83,36 @@
                 <button type="reset" value="Borrar" class="btn btn-danger mt-2 mb-5 buttonFont">Borrar</button>
                 <button type="submit" value="Enviar" class="btn btn-primary mt-2 mb-5 buttonFont">Enviar</button>
             </div>
-        </form>
+        </form> -->
+
+        <div class="contactoFlexContainer">
+            <form class="formContacto">
+                <div class="formDiv">
+                    <label for="nombre">Nombre</label>
+                    <input type="text" id="nombre" placeholder="Ej. Juan" required>
+                </div>
+                <div class="formDiv">
+                    <label for="apellido">Apellido</label>
+                    <input type="text" id="apellido" placeholder="Ej. Lopez" required>
+                </div>
+                <div class="formDiv">
+                    <label for="email">Correo Electrónico</label>
+                    <input type="email" id="email" placeholder="Ej. juan@lopez.com" required>
+                </div>
+                <div class="formDiv">
+                    <label for="telefono">Teléfono</label>
+                    <input type="tel" id="telefono" placeholder="Ej. 1123456789" required>
+                </div>
+                <div class="formDiv">
+                    <textarea placeholder="¡Dejanos tu comentario!" id="floatingTextarea"
+                        style="height: 150px"></textarea>
+                </div>
+                <div class="formBotton">
+                    <button type="reset" value="Borrar" class="borrarButton">Borrar</button>
+                    <button type="submit" value="Enviar" class="enviarButton">Enviar</button>
+                </div>
+            </form>
+        </div>
 
     </main>
 
